--- a/css/main.css
+++ b/css/main.css
@@ -2,9 +2,105 @@
 	box-sizing: border-box;
 }
 
+body {
+	
+}
+
 .main-nav {
 	display: -webkit-flex;
 	-webkit-justify-content: flex-end;
 	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+.main-nav a,
+.foot-nav a {
+	display: block;
+	color: gray;
+	padding: 1em;
 	text-decoration: none;
+	font-size: 16px;
+}
+
+.main-nav a:hover,
+.foot-nav a:hover {
+	text-decoration: underline;
+}
+
+.google-logo {
+	padding-top: 12em;
+}
+
+.search-box,
+.buttons {
+	padding-top: 2em;
+}
+
+.google-logo,
+.search-box,
+.buttons {
+	display: flex;
+	justify-content: center;
+}
+
+.foot-nav {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	position: absolute;
+ 	right: 0;
+  	bottom: 0;
+  	left: 0;
+}
+
+.left {
+	margin-right: auto;
+}
+
+input {
+	width: 630px;
+	height: 50px;
+	border: 1px solid #dedede;
+	top-padding: 1em;
+}
+
+input {
+    background-image: url(../img/mic.png);
+    background-position: 590px 10px;
+    background-size: 22px 28px;
+    background-repeat: no-repeat;
+}
+
+button {
+	width: 158px;
+	height: 50px;
+	background-color: #f2f2f2;
+	border: 1px solid #f2f2f2;
+	border-radius: 2px;
+	cursor: default;
+    font-family: arial,sans-serif;
+    font-size: 16px;
+    font-weight: bold;
+    margin: 11px 4px;
+    min-width: 54px;
+    padding: 0 16px;
+    text-align: center;
+    color: #757575;
+}
+
+button:hover {
+	border: 1px solid #c2c4c3;
+	color: black;
+}
+
+img {
+	height: 110px;
+}
+
+p {
+	text-align: center;
 }
